buc (3.0ubuntu0~ppa0) UNRELEASED; urgency=low

  * debian/control:
    + add biblio binary package;
    + buc binary stanza modified accordingly.
  * debian/*.install: update accordingly.
  * debian/biblio.manpages: add accordingly.
  * {un,}install.sh: drop, useless.
  * auto.sh*: split auto.sh in auto.sh.buc and auto.sh.biblio.

 -- Andrea Colangelo <warp10@ubuntu.com>  Wed, 12 Jun 2013 17:53:37 +0200

buc (2.1ubuntu0~ppa1) precise; urgency=low

  * auto.sh: start x11vnc
  * debian/control: add some deps

 -- Andrea Colangelo <warp10@ubuntu.com>  Wed, 12 Jun 2013 17:23:41 +0200

buc (2.0ubuntu0~ppa1) precise; urgency=low

  * shut: add window to authorize user and start session.  
  * auto.sh:
    + Do not create the firefox icon anymore.
    + Do not use zenity to create the warning window. 

 -- Andrea Colangelo <warp10@ubuntu.com>  Wed, 12 Jun 2013 17:23:28 +0200

buc (1.0ubuntu0~ppa0) precise; urgency=low

  * home.html: improved, based on firefox default page.
  * images/*: added accordingly.

 -- Andrea Colangelo <warp10@ubuntu.com>  Thu, 14 Feb 2013 20:19:15 +0100

buc (0.2ubuntu0~ppa1) precise; urgency=low

  * prefs.sh: drop code to handle locales.
  * shut:
    + remaining time now shown next to the icon;
    + changed order of options in menu;
    + PEP8'ed.
  * auto.sh: info dialog improved.
  * debian/post{inst,rm}: disable xterm and uxterm too.

 -- Andrea Colangelo <warp10@ubuntu.com>  Thu, 14 Feb 2013 12:00:17 +0100

buc (0.1ubuntu0~ppa1) precise; urgency=low

  * Initial Release.

 -- Andrea Colangelo <warp10@ubuntu.com>  Mon, 11 Feb 2013 11:40:45 +0100