@@ -10,4 +10,9 @@
 #export DH_VERBOSE=1
 
 %:
-	dh $@ --with python2 
+	dh $@ --with python2
+
+override_dh_install:
+	dh_install
+	mv $(CURDIR)/debian/biblio/etc/guest-session/auto.sh.biblio $(CURDIR)/debian/biblio/etc/guest-session/auto.sh
+	mv $(CURDIR)/debian/buc/etc/guest-session/auto.sh.buc $(CURDIR)/debian/buc/etc/guest-session/auto.sh
